# Krumb

./: .gitmodules  CMakeLists.txt  GenerateCMakeProject.bat
Engine/: CMakeLists.txt
Engine/src/: KrumbEngine.h
Engine/src/Engine/: Application.cpp  Application.h  EntryPoint.h  Logger.cpp  Logger.h
Engine/src/KrumbEngine/: Application.cpp  Application.h  Core.h  EntryPoint.h  GameSettings.h  KrumbTime.h  Logger.cpp  Logger.h
Engine/src/KrumbEngine/event/: EventSystem.h  IEvent.h
Engine/src/KrumbEngine/input/: InputEvents.h
Engine/src/KrumbEngine/render/: Shader.h  Texture.h
Engine/src/KrumbEngine/window/: Window.cpp  Window.h  WindowEvents.h
Krumb/: CMakeLists.txt
Krumb/src/: Krumb.cpp
Krumb/src/Krumb/entity/: Entity.h  Player.cpp  Player.h
Krumb/src/Krumb/filesystem/: WorldIO.cpp  WorldIO.h
Krumb/src/Krumb/render/: Camera.cpp  Camera.h  ChunkMesh.h  ChunkMeshBuilder.cpp  ChunkMeshBuilder.h  WorldRenderer.cpp  WorldRenderer.h
Krumb/src/Krumb/world/: Block.cpp  Block.h  Chunk.cpp  Chunk.h  World.cpp  World.h  WorldDefines.h
data/: dirt.json
